contact/dead-link/style.css
body {
    background-color: #eee;
    font-family: Arial, sans-serif;
    margin: 0;
    padding: 0;
}

.page-content {
    margin-top: 100px;
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100vw;
    min-height: 70vh;
}

.dead-link-container {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    justify-content: center;
    text-align: center;
    margin: auto 20px;
    width: 100%;
}
.dead-link-container h1 {
    font-family: "Roboto Slab", sans-serif;
    font-size: 2em;
    color: #333;
    margin: 20px 0;
    padding: 0;
}
.search-container {
    margin: 0;
    padding: 0;
    position: relative;
}
#product-search {
    width: 800px;
    padding: 18px;
    border: 1px solid #ccc;
    outline: none;
    border-radius: 10px;
    font-size: 1.2em;
    font-family: "Roboto Slab", sans-serif;
    font-optical-sizing: auto;
    font-style: normal;
    color: #333;
    margin: 0 auto;
}
@media (max-width: 1000px) {
    #product-search {
        width: calc(100vw - 100px);
        padding: 10px;
        font-size: 1em;
    }
}
.search-dropdown-list {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-align: center;
    width: 800px;
    z-index: 1000;
    list-style: none;
    position: absolute;
    margin: 0;
    padding: 0;
    top: 100%;
    left: 50%;
    transform: translateX(-50%);
}
.search-dropdown-list li {
    font-family: "Roboto Slab", sans-serif;
    font-optical-sizing: auto;
    font-size: 1.2em;
    font-style: normal;
    color: #333;
    padding: 15px 0;
    cursor: pointer;
    background-color: #fff;
    border-right: 1px solid #ccc;
    border-left: 1px solid #ccc;
    width: calc(100% + 36px);
}
.search-dropdown-list li:last-child {
    border-radius: 0 0 10px 10px;
    border-bottom: 1px solid #ccc;
}
.search-dropdown-list li:hover {
    background-color: #f0f0f0;
}
.dead-link-container a {
    text-decoration: none;
    color: #ffeeee;
    background-color: #ff3535;
    font-family: "Roboto Slab", sans-serif;
    font-optical-sizing: auto;
    font-style: normal;
    font-size: 1.2em;
    cursor: pointer;
    width: fit-content;
    margin: 20px auto;
    padding: 10px 20px;
    border-radius: 10px;
    border: 2px solid #ff1212;
    transition: background-color 200ms ease;
}
@media (max-width: 1000px) {
    .dead-link-container a {
        font-size: 1em;
        padding: 5px 30px;
        margin: 10px auto;
    }
}
.dead-link-container a:hover {
    background-color: #ff5c5c;
}

